--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,8 @@ cscope.out
 Firmware.sublime-workspace
 Images/*.bin
 Images/*.px4
-mavlink/include/mavlink/v0.9/
+mavlink/include/mavlink/v1.0/
+uavcan
 /nuttx-configs/px4io-v2/src/.depend
 /nuttx-configs/px4io-v2/src/Make.dep
 /nuttx-configs/px4io-v2/src/libboard.a
